<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bangumi_layout"
    android:background="@drawable/background_image"
    android:focusable="false"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <com.facebook.drawee.view.SimpleDraweeView
        android:id="@+id/bangumi_blur"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />
    <View android:background="@color/black_60"
        android:focusable="false"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"/>
    <RelativeLayout
        android:id="@+id/content_layout"
        android:paddingLeft="@dimen/px_70"
        android:paddingTop="@dimen/px_70"
        android:paddingRight="@dimen/px_70"
        android:focusable="false"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <com.dandanplay.tv2.widget.ShadowTextView
            android:textAppearance="@style/TextAppearance.App.XLarge"
            android:textColor="@color/white"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:id="@+id/bangumi_title"
            android:focusable="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="标题"
            android:maxLines="1"
            android:maxEms="20" />
        <com.dandanplay.tv2.widget.ShadowTextView
            android:textAppearance="@style/TextAppearance.App.Small"
            android:textColor="@color/white_50"
            android:id="@+id/bangumi_episo"
            android:focusable="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/px_20"
            tools:text="集数"
            android:layout_toEndOf="@id/bangumi_title"
            android:layout_alignBaseline="@id/bangumi_title" />
        <LinearLayout
            android:orientation="horizontal"
            android:focusable="false"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_below="@id/bangumi_title">
            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/bangumi_img"
                android:background="@drawable/shape_default_loading_img"
                android:focusable="false"
                android:layout_width="@dimen/px_520"
                android:layout_height="fill_parent"
                android:layout_marginTop="@dimen/px_80"
                android:layout_marginBottom="@dimen/px_184"
                android:scaleType="centerCrop"
                app:placeholderImage="@drawable/bili_default_image_tv"
                app:placeholderImageScaleType="centerInside"
                app:roundedCornerRadius="@dimen/px_12" />
            <RelativeLayout android:orientation="vertical"
                android:focusable="false"
                android:clipToPadding="false"
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_marginTop="@dimen/px_80"
                android:layout_weight="1.0">
                <RelativeLayout
                    android:orientation="vertical"
                    android:focusable="false"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/px_550"
                    android:baselineAligned="false">
                    <com.dandanplay.tv2.widget.ShadowTextView
                        android:textSize="@dimen/px_32"
                        android:textColor="@color/white_50"
                        android:id="@+id/bangumi_describe_title"
                        android:paddingLeft="@dimen/px_70"
                        android:paddingRight="@dimen/px_70"
                        android:focusable="false"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bangumi_describe" />
                    <com.dandanplay.tv2.widget.ShadowTextView
                        android:textAppearance="@style/TextAppearance.App.Small"
                        android:textColor="@color/white"
                        android:ellipsize="end"
                        android:id="@+id/bangumi_info_describe"
                        android:paddingLeft="@dimen/px_70"
                        android:paddingRight="@dimen/px_70"
                        android:focusable="false"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/px_9"
                        android:layout_marginBottom="@dimen/px_9"
                        android:maxLines="8"
                        tools:text="a \n b\n c\n d\n e\n f\n g\n h\n i\n"
                        android:layout_below="@id/bangumi_describe_title" />
                    <com.dandanplay.tv2.widget.ShadowTextView
                        android:textAppearance="@style/TextAppearance.App.Small"
                        android:textColor="@color/white_50"
                        android:id="@+id/bangumi_tag_title"
                        android:paddingLeft="@dimen/px_70"
                        android:paddingRight="@dimen/px_70"
                        android:focusable="false"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/px_30"
                        android:text="@string/bangumi_tag"
                        android:layout_below="@id/bangumi_info_describe" />
                    <com.dandanplay.tv2.widget.ShadowTextView
                        android:textAppearance="@style/TextAppearance.App.Small"
                        android:textColor="@color/white"
                        android:ellipsize="end"
                        android:id="@+id/bangumi_tag"
                        android:paddingLeft="@dimen/px_70"
                        android:paddingTop="@dimen/px_18"
                        android:paddingRight="@dimen/px_70"
                        android:focusable="false"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="2"
                        tools:text="a \n b\n"
                        android:layout_below="@id/bangumi_tag_title" />
<!--                    <com.dandanplay.tv.ShadowTextView-->
<!--                        android:textAppearance="@style/TextAppearance.App.Small"-->
<!--                        android:textColor="@color/white_50"-->
<!--                        android:id="@+id/bangumi_staff_title"-->
<!--                        android:paddingLeft="@dimen/px_70"-->
<!--                        android:paddingRight="@dimen/px_70"-->
<!--                        android:focusable="false"-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:layout_marginTop="@dimen/px_30"-->
<!--                        android:text="@string/bangumi_staff"-->
<!--                        android:layout_below="@id/bangumi_tag" />-->
<!--                    <com.dandanplay.tv.ShadowTextView-->
<!--                        android:textAppearance="@style/TextAppearance.App.Small"-->
<!--                        android:textColor="@color/white"-->
<!--                        android:ellipsize="end"-->
<!--                        android:id="@+id/bangumi_info_staffs"-->
<!--                        android:paddingLeft="@dimen/px_70"-->
<!--                        android:paddingTop="@dimen/px_18"-->
<!--                        android:paddingRight="@dimen/px_70"-->
<!--                        android:focusable="false"-->
<!--                        android:layout_width="fill_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:maxLines="2"-->
<!--                        android:layout_below="@id/bangumi_staff_title" />-->
                </RelativeLayout>
                <RelativeLayout
                    android:gravity="bottom"
                    android:layout_gravity="bottom"
                    android:paddingLeft="@dimen/px_70"
                    android:paddingRight="@dimen/px_70"
                    android:focusable="false"
                    android:clipChildren="false"
                    android:clipToPadding="false"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/px_84">
                    <com.dandanplay.tv2.widget.DrawTextView
                        android:textSize="@dimen/px_40"
                        android:textColor="@color/white"
                        android:gravity="center"
                        android:id="@+id/bangumi_play"
                        android:background="@drawable/background_white_rect"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:nextFocusLeft="@id/bangumi_play"
                        android:nextFocusRight="@id/bangumi_follow"
                        android:nextFocusUp="@id/bangumi_play"
                        android:nextFocusDown="@id/bangumi_play"
                        android:layout_width="@dimen/px_240"
                        android:layout_height="@dimen/px_96"
                        android:text="@string/bangumi_play"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentBottom="true" />
                    <TextView
                        android:textSize="@dimen/px_30"
                        android:textColor="@color/white_50"
                        android:gravity="center"
                        android:id="@+id/bangumi_play_episode_txt"
                        android:background="@drawable/ic_bangumi_episode"
                        android:paddingTop="@dimen/px_12"
                        android:layout_width="@dimen/px_264"
                        android:layout_height="@dimen/px_96"
                        android:layout_marginStart="@dimen/px_14"
                        android:layout_marginTop="@dimen/px_16"
                        android:text="@string/bangumi_play_last_episode_fmt"
                        android:layout_below="@id/bangumi_play"
                        android:layout_alignStart="@id/bangumi_play"
                        android:alpha="0.0" />
                    <com.dandanplay.tv2.widget.DrawTextView
                        android:textSize="@dimen/px_40"
                        android:textColor="@color/white"
                        android:gravity="center"
                        android:id="@+id/bangumi_follow"
                        android:background="@drawable/background_white_rect"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:nextFocusLeft="@id/bangumi_play"
                        android:nextFocusRight="@id/bangumi_more"
                        android:nextFocusUp="@id/bangumi_follow"
                        android:nextFocusDown="@id/bangumi_follow"
                        android:layout_width="@dimen/px_120"
                        android:layout_height="@dimen/px_96"
                        android:layout_marginStart="@dimen/px_30"
                        android:text="@string/bangumi_follow"
                        android:layout_toEndOf="@id/bangumi_play"
                        android:layout_alignParentBottom="true" />
                    <com.dandanplay.tv2.widget.DrawTextView
                        android:textSize="@dimen/px_40"
                        android:textColor="@color/white"
                        android:gravity="center"
                        android:id="@+id/bangumi_more"
                        android:background="@drawable/background_white_rect"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:nextFocusLeft="@id/bangumi_follow"
                        android:nextFocusRight="@id/bangumi_tabs"
                        android:nextFocusUp="@id/bangumi_more"
                        android:nextFocusDown="@id/bangumi_more"
                        android:layout_width="@dimen/px_120"
                        android:layout_height="@dimen/px_96"
                        android:layout_marginStart="@dimen/px_30"
                        android:text="@string/bangumi_more"
                        android:layout_toEndOf="@id/bangumi_follow"
                        android:layout_alignParentBottom="true" />
                </RelativeLayout>
            </RelativeLayout>
            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/bangumi_episo_layout"
                android:focusable="false"
                android:layout_width="@dimen/px_566"
                android:layout_height="fill_parent"
                android:layout_marginBottom="@dimen/px_184">
                <com.dandanplay.tv2.widget.PagerSlidingTabStrip
                    android:id="@+id/bangumi_tabs"
                    android:paddingLeft="@dimen/px_16"
                    android:paddingRight="@dimen/px_16"
                    android:focusable="false"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/px_80"
                    app:pstsIndicatorColor="@color/white"
                    app:pstsShouldExpand="false"
                    app:pstsTabPaddingLeftRight="@dimen/px_16"
                    style="@style/Widget.App.SlidingTab.Top" />
                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/bangumi_pager"
                    android:background="@drawable/shape_rectangle_trans_with_12corner_white_10"
                    android:focusable="false"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</FrameLayout>